test/bad/generics/def01.px

func f(x: T): Void def
    return

f(2)
